methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
      if(isFacingWall()){
        return false;
        
 
      if(getGroundColor()!=Color.green){
        backward();
        return false
      }
      return getGroundColor()
      return isFacingTrail()
    }
}
        
        
        
     
      